# ndc-graphql

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  justfile  rust-toolchain.toml
.github/workflows/: build-and-test.yaml  deploy-stage.yaml  security-audit.yaml
ci/templates/: connector-metadata.yaml  manifest.yaml
crates/common/: Cargo.toml
crates/common/src/: capabilities.rs  capabilities_response.rs  client.rs  config.rs  config_file.rs  lib.rs  schema.rs  schema_response.rs
crates/common/src/config/: config_file.rs  schema.rs
crates/ndc-graphql/: Cargo.toml
crates/ndc-graphql-cli/: Cargo.toml
crates/ndc-graphql-cli/src/: graphql.rs  main.rs
crates/ndc-graphql-cli/src/graphql/: introspection.rs  introspection_query.graphql  introspection_schema.graphql
crates/ndc-graphql-cli/tests/: introspection.json  introspection.rs
crates/ndc-graphql-cli/tests/snapshots/: introspection__generate_schema_from_introspection.snap
crates/ndc-graphql/src/: connector.rs  lib.rs  main.rs  query_builder.rs
crates/ndc-graphql/src/connector/: capabilities.rs  configuration.rs  mutation.rs  query.rs  schema.rs  setup.rs
crates/ndc-graphql/src/query_builder/: error.rs  operation_parameters.rs  operation_variables.rs
crates/ndc-graphql/tests/: query_builder.rs
crates/ndc-graphql/tests/config-1/configuration/: configuration.json
crates/ndc-graphql/tests/config-1/mutations/: 01_single_operation.request.json  02_multiple_operations.request.json  03_request_level_arguments.request.json
crates/ndc-graphql/tests/config-1/queries/: 01_basic_query.request.json  02_root_node_parameters.request.json  03_child_node_parameters.request.json  04_foreach.request.json  05_request_level_arguments.request.json
crates/ndc-graphql/tests/config-2/configuration/: configuration.json  configuration.schema.json
crates/ndc-graphql/tests/config-2/mutations/: 01_single_operation.request.json  02_multiple_operations.request.json
crates/ndc-graphql/tests/config-2/queries/: 01_basic_query.request.json  02_root_node_parameters.request.json  03_child_node_parameters.request.json  04_foreach.request.json
crates/ndc-graphql/tests/config-3/configuration/: configuration.json  configuration.schema.json  schema.graphql
crates/ndc-graphql/tests/config-3/mutations/: 01_single_operation.request.json  02_multiple_operations.request.json
crates/ndc-graphql/tests/config-3/queries/: 01_basic_query.request.json  02_root_node_parameters.request.json  03_child_node_parameters.request.json  04_foreach.request.json
crates/ndc-graphql/tests/snapshots/: query_builder__Capabilities.snap  query_builder__Configuration JSON Schema.snap  query_builder__Headers@01_basic_query.request.json.snap  query_builder__Headers@01_single_operation.request.json.snap  query_builder__Headers@02_multiple_operations.request.json.snap  query_builder__Headers@02_root_node_parameters.request.json.snap  query_builder__Headers@03_child_node_parameters.request.json.snap  query_builder__Headers@03_request_level_arguments.request.json.snap  query_builder__Headers@04_foreach.request.json.snap  query_builder__Headers@05_request_level_arguments.request.json.snap  query_builder__Query String@01_basic_query.request.json.snap  query_builder__Query String@01_single_operation.request.json.snap  query_builder__Query String@02_multiple_operations.request.json.snap  query_builder__Query String@02_root_node_parameters.request.json.snap  query_builder__Query String@03_child_node_parameters.request.json.snap  query_builder__Query String@03_request_level_arguments.request.json.snap  query_builder__Query String@04_foreach.request.json.snap  query_builder__Query String@05_request_level_arguments.request.json.snap  query_builder__Variables@01_basic_query.request.json.snap  query_builder__Variables@01_single_operation.request.json.snap  query_builder__Variables@02_multiple_operations.request.json.snap  query_builder__Variables@02_root_node_parameters.request.json.snap  query_builder__Variables@03_child_node_parameters.request.json.snap  query_builder__Variables@03_request_level_arguments.request.json.snap  query_builder__Variables@04_foreach.request.json.snap  query_builder__Variables@05_request_level_arguments.request.json.snap  query_builder__config-1 NDC Schema.snap  query_builder__config-2 NDC Schema.snap  query_builder__config-3 NDC Schema.snap
