[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
glob-match = "0.2"
graphql_client = "0.14"
graphql-parser = "0.4"
ndc-models = { git = "http://github.com/hasura/ndc-spec.git", tag = "v0.2.10" }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
schemars = "0.8.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
