[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
glob-match = { workspace = true }
graphql_client = { workspace = true }
graphql-parser = { workspace = true }
ndc-models = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
