[package]
name = "ndc-graphql-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.3", features = ["derive", "env"] }
common = { path = "../common" }
graphql_client = "0.14.0"
graphql-introspection-query = "0.2.0"
graphql-parser = "0.4.0"
ndc-models = { git = "http://github.com/hasura/ndc-spec.git", tag = "v0.1.6" }
schemars = "0.8.16"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "fs"] }

[dev-dependencies]
insta = { version = "1.40.0", features = ["yaml"] }
