[package]
name = "ndc-graphql-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
common = { path = "../common" }
graphql_client = "0.14"
graphql-introspection-query = "0.2"
graphql-parser = "0.4"
ndc-models = { git = "http://github.com/hasura/ndc-spec.git", tag = "v0.2.10" }
schemars = "0.8.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }

[dev-dependencies]
insta = { version = "1.43", features = ["yaml"] }
