[package]
name = "ndc-graphql-cli"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
clap = { workspace = true }
graphql_client = { workspace = true }
graphql-parser = { workspace = true }
ndc-models = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { version = "1.43", features = ["yaml"] }
