[package]
name = "ndc-graphql"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1"
common = { path = "../common" }
glob-match = "0.2"
graphql-parser = "0.4"
indexmap = "2.11"
ndc-sdk = { git = "https://github.com/hasura/ndc-sdk-rs", rev = "6ffe31a2acc652025405ce2aa35d82df10cb1d35", package = "ndc-sdk", features = [
  "rustls",
], default-features = false }
prometheus = "0.14"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1"
tracing = "0.1"

[dev-dependencies]
insta = { version = "1.43", features = ["yaml", "glob", "json"] }
schemars = "0.8.22"
