[package]
name = "ndc-graphql"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
common = { path = "../common" }
async-trait = { workspace = true }
glob-match = { workspace = true }
graphql-parser = { workspace = true }
indexmap = { workspace = true }
ndc-sdk = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { version = "1.43", features = ["yaml", "glob", "json"] }
schemars = "0.8.22"
